--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -3,6 +3,8 @@ name: Jekyll site CI
 on:
   push:
     branches: [ "main" ]
+    paths-ignore: ["king"]
+    
   pull_request:
     branches: [ "main" ]
 
