--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -3,7 +3,7 @@ name: Jekyll site CI
 on:
   push:
     branches: [ "main" ]
-    paths-ignore: 'king/**'
+    paths-ignore: '.github/**'
     
   pull_request:
     branches: [ "main" ]
